--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.4",
     "@react-router/node": "^7.5.3",
     "@react-router/serve": "^7.5.3",
+    "clsx": "^2.1.1",
     "isbot": "^5.1.27",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
