--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,10 @@
 /.react-router/
 /.idea
 /build/
+
+# dotenv environment variable files
+/.env
+/.env.development.local
+/.env.test.local
+/.env.production.local
+/.env.local
