--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "@react-router/node": "^7.5.3",
     "@react-router/serve": "^7.5.3",
     "clsx": "^2.1.1",
+    "highcharts": "^12.2.0",
+    "highcharts-react-official": "^3.2.2",
     "isbot": "^5.1.27",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-intersection-observer": "^9.16.0",
     "react-router": "^7.5.3",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1"
