--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
     "@headlessui/react": "^2.2.4",
     "@react-router/node": "^7.5.3",
     "@react-router/serve": "^7.5.3",
+    "@solana/kit": "^2.1.1",
+    "@solana/wallet-adapter-base": "^0.9.26",
+    "@solana/wallet-adapter-react": "^0.15.38",
+    "@solana/wallet-adapter-react-ui": "^0.9.38",
+    "@solana/wallet-adapter-wallets": "^0.19.36",
     "clsx": "^2.1.1",
     "highcharts": "^12.2.0",
     "highcharts-react-official": "^3.2.2",
