--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
+    "@coral-xyz/anchor": "^0.31.1",
     "@headlessui/react": "^2.2.4",
     "@react-router/node": "^7.5.3",
     "@react-router/serve": "^7.5.3",
@@ -17,6 +18,8 @@
     "@solana/wallet-adapter-react": "^0.15.38",
     "@solana/wallet-adapter-react-ui": "^0.9.38",
     "@solana/wallet-adapter-wallets": "^0.19.36",
+    "bs58": "^6.0.0",
+    "buffer": "^6.0.3",
     "clsx": "^2.1.1",
     "highcharts": "^12.2.0",
     "highcharts-react-official": "^3.2.2",
@@ -28,7 +31,8 @@
     "react-slick": "^0.30.3",
     "react-tooltip": "^5.29.1",
     "react-use": "^17.6.0",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "swr": "^2.3.3"
   },
   "devDependencies": {
     "@react-router/dev": "^7.5.3",
