--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "highcharts": "^12.2.0",
     "highcharts-react-official": "^3.2.2",
     "isbot": "^5.1.27",
+    "pinata": "^2.4.8",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-intersection-observer": "^9.16.0",
