Install additional libs

--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@coral-xyz/anchor": "^0.31.1",
     "@headlessui/react": "^2.2.4",
+    "@orao-network/solana-vrf": "^0.6.1",
     "@react-router/node": "^7.5.3",
     "@react-router/serve": "^7.5.3",
     "@solana/kit": "^2.1.1",
+    "@solana/spl-token": "^0.4.13",
     "@solana/wallet-adapter-base": "^0.9.26",
     "@solana/wallet-adapter-react": "^0.15.38",
     "@solana/wallet-adapter-react-ui": "^0.9.38",
