--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-intersection-observer": "^9.16.0",
     "react-router": "^7.5.3",
     "react-slick": "^0.30.3",
+    "react-toastify": "^11.0.5",
     "react-tooltip": "^5.29.1",
     "react-use": "^17.6.0",
     "slick-carousel": "^1.8.1",
