--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "isbot": "^5.1.27",
     "pinata": "^2.4.8",
     "react": "^19.1.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^19.1.0",
     "react-intersection-observer": "^9.16.0",
     "react-router": "^7.5.3",
